listing category styles alignment issue fixed

--- a/pages/components/category/category.module.scss
+++ b/pages/components/category/category.module.scss
@@ -108,7 +108,9 @@
 
 @media only screen and (min-width: 320px) and (max-width: 1024px) {
   .listingfilmrole {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .divisionchild {
     width: 400px;
